# code-atlas

./: .env.example  .gitignore  README.md  docker-compose.yml
.agents/rules/: project-rules.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/db/: database.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 2026_03_10_eabad67c2013_initial_tables.py  2026_03_21_add_commit_unique_constraint.py
backend/app/models/: __init__.py  commit.py  contributor.py  file_change.py  repository.py
backend/app/routers/: __init__.py  health.py  repos.py  ws.py
backend/app/schemas/: __init__.py  commit.py  contributor.py  file.py  health.py  repository.py
backend/app/services/: repository.py
backend/app/utils/: github.py
backend/app/workers/: celery_app.py  tasks.py
data/: famous_repos.json  languages.json
frontend/: Dockerfile  globals.d.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js  page.module.css  page.tsx
frontend/app/components/: Navbar.module.css  Navbar.tsx
frontend/app/repo/[owner]/[name]/: page.module.css  page.tsx
frontend/components/: CodeReplay.module.css  CodeReplay.tsx  FileBrowser.module.css  FileBrowser.tsx  GitCity3D.module.css  GitCity3D.tsx
frontend/lib/: api.js  api.ts
scripts/: seed_languages.py  setup.sh
